# imagesorter

./: LICENSE  README.md  setup.cfg  tox.ini
docs/: conf.py  index.rst
src/imagesorter/: napari.yaml
src/imagesorter/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
